added sample and updated readme